[package]
name = "keycloak-middlewares"
version = "0.0.1"
edition = "2021"

[lib]
name = "keycloak_middlewares"
path = "src/lib.rs"

[features]
actix = ["actix-web"]

[dependencies]
anyhow = "1.0.94"
jsonwebtoken = "9.3.0"
lru = "0.12.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.216"
tokio = "1.42.0"
actix-web = { version = "4.9.0", optional = true }
rand = "0.8.5"
